# ink

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-icon.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/__tests__/: backup.test.ts  diff3.test.ts  externalActivity.test.ts  fidelity.test.ts  statusMessages.test.ts  toasts.test.ts  toc.test.ts  tocNavigation.test.ts  workspace.test.ts
src/components/: BackupRestorePrompt.tsx  Editor.tsx  Lightbox.tsx  PaneView.tsx  SearchBar.tsx  Settings.tsx  ShortcutHelp.tsx  StatusBar.tsx  TOC.tsx  TabBar.tsx  Toasts.tsx  UnsavedPrompt.tsx  Welcome.tsx
src/editor/: calloutPlugin.ts  fidelityNodeViews.ts  focusPlugin.ts  hardbreakCleaner.ts  keymapOverrides.ts  mergeHighlightPlugin.ts  placeholderPlugin.ts  searchMilkdown.ts  searchPlugin.ts  taskTogglePlugin.ts
src/hooks/: useBackup.ts  useDragDrop.ts  useExternalFilePoll.ts  useExternalFileWatch.ts  useFile.ts  useKeybinding.ts  useTheme.ts
src/lib/: diff3.ts  externalActivity.ts  fidelity.ts  imagePath.ts  milkdownDocDiff.ts  statusMessages.ts  tocNavigation.ts  viewportMemory.ts  wordCount.ts
src/store/: externalActivity.ts  recents.ts  searchStore.ts  session.ts  settings.ts  statusInfo.ts  toasts.ts  workspace.ts
