[package]
name = "ink"
version = "0.3.0"
description = "墨 · A minimal, elegant Markdown reader & light editor"
authors = ["Linek & Forge"]
license = "MIT"
repository = "https://github.com/LinekForge/ink"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# fs.watch 监听外部改动（FSEvents on macOS），替代 2s mtime poll
notify = "6"
# xxHash64 算内容 hash → avoid echo（Ink 自己 write_file 的内容 hash 进 skip set）
twox-hash = "1"
# Windows canonicalize 返回 \\?\ UNC 前缀，dunce 去掉它
dunce = "1"

